fixtures/typescript/test_double/should_fail/runtime_test_support_import.ts
import { fakeUser } from "../tests/helpers/fake-user"

export const user = fakeUser
